--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,12 +12,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.13'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip3 install --upgrade pip3
+        pip3 install -r requirements.txt
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
+        pip3 install pytest pytest-cov
         pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
