--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,9 +15,9 @@ jobs:
         python-version: '3.13.0-rc.1'
     - name: Install dependencies
       run: |
-        python -m pip3 install --upgrade pip3
-        pip3 install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        pip3 install pytest pytest-cov
+        pip install pytest pytest-cov
         pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
