--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,3 +21,13 @@ jobs:
       run: |
         pip install pytest pytest-cov
         pytest test_simple.py --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage.xml
+    - name: Upload coverage report to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        files: coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
