--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
-        pytest test_simple.py --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+        pytest test_simple.py --doctest-modules --junitxml=junit/test-results.xml --cov=./main --cov-report=xml --cov-report=html
     - name: Upload coverage report
       uses: actions/upload-artifact@v3
       with:
